examples/test/testpolicy7718.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7718
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key19: value18
      key37: value32
      key2: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value17
      podSelector:
        matchLabels:
          key0: value27
